--- a/estilo/style.css
+++ b/estilo/style.css
@@ -9,3 +9,53 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+}
+
+.content1 {
+    width: 100vw;
+    height: 900px;
+    color: white;
+    background-image: linear-gradient(to top,rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.626)), url('../imagens/fundo1.jpg');
+}
+
+.content1 h1 {
+    text-align: center;
+    padding-top: 60px;  
+    font-size: 40px;
+}
+
+.content1 h4 {
+    text-align: center;
+}
+
+.content1 .mtv2 {
+    text-align: center;
+}
+
+.cards {
+    display: flex;
+    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.cards .c1 {
+    width: 700px;
+    height: 300px;
+}
+
+.cards .c2 {
+    width: 700px;
+    height: 300px;
+}
+
+.cards .c3 {
+    width: 700px;
+    height: 300px;
+}
